--- a/css/ds.css
+++ b/css/ds.css
@@ -5,10 +5,11 @@
     box-sizing: border-box;
     font-family: 'Segoe UI', Arial, sans-serif;
 }
-
 body {
-    background: #000;
-    color: #e2e2e2;
+    margin: 0;
+    padding: 0;
+    background: url("../img/Imagem\ de\ fundo.png") no-repeat center center fixed;
+    background-size: cover;
 }
 
 /* HEADER */
