--- a/css/rs.css
+++ b/css/rs.css
@@ -7,9 +7,12 @@
 }
 
 body {
-    background: #000;
-    color: #e2e2e2;
+    margin: 0;
+    padding: 0;
+    background: url("../img/Imagem\ de\ fundo.png") no-repeat center center fixed;
+    background-size: cover;
 }
+
 
 /* --- HEADER e MENU (mesmo do principal) --- */
 .topo {
