--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,10 @@
 }
 
 body {
-    background: #000;
-    color: #e2e2e2;
+    margin: 0;
+    padding: 0;
+    background: url("../img/Imagem\ de\ fundo.png") no-repeat center center fixed;
+    background-size: cover;
 }
 
 /* HEADER */
